style/slider.less
/* Styles for the slider.

Z-indexes:
.progress > span: 1
.ig-likes-logo-container: 12 < Should be displayed on top of the ig-caption/slides.
.ig-caption 10 < Should be displayed on top of the slider / img.
.slider-navigation 14 < should be displayed on top.
*/
#sliderBox {
    position: relative;
}

@media screen and (max-width: 499px) {
    #sliderBox {
        /* If we do left -50vw, details are pulled slightly too much to the left
        TO DO: Fix the cause. */
        margin-left: calc(50% - 48.33vw);
        margin-right: calc(50% - 50vw);
        width: 100vmin;
        border-left: none;
        border-right: none;
    }
}

.rslides {
    position: relative;
    list-style: none;
    overflow: hidden;
    width: 100%;
    padding: 0;
    margin: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
}

.rslides ul {
    list-style-type: none;
}

.rslides li {
    -webkit-backface-visibility: hidden;
    position: absolute;
    display: none;
    left: 0;
    top: 0;
}

.rslides img {
    display: block;
    object-position: 50% 50%;
    /* default value: image is centered*/
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;

}

.small-slider img {
    display: block;
    object-position: 50% 50%;
    /* default value: image is centered*/
    object-fit: fill;
    width: 100%;
    max-height: 100%;
    height: auto;
    border: solid 2px @primary;
}

.small-slider {
    margin-left: -.75em;
    margin-right: -.75em;
}

.ig-img, .rslides img {
    display: block;
    object-position: 50% 50%;
    /* default value: image is centered*/
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
}

.ig-img-container {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    object-position: 50% 50%;
    /* default value: image is centered*/
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
    overflow:  auto;

}

.ig-likes-logo-container {
    position: absolute;
    top: 12px;
    right: 12px;
    display: flex;
    Z-index: 12;
}

.small-slider .ig-img-container, .small-slider .ig-caption {
    overflow: hidden;
}

.ig-caption {
    background: #efebe9;
    border-color: #bbb;
    z-index: 10;
    font-size: .85em;
    padding: 20px;
}

.small-slider .ig-caption {
    padding: .3em 1em 1.5em 2.3em;
}

.no-borders {
    border: none!important;
    padding: 0;
}
.no-external-icon:after {
    display: none;
}

.rslides {
    background-color: #EFEBE9;
}

.rslides .full-screen-slider {
    background-color: #FAFAFA;
}

.small-slider .ig-caption {
    width: 100%;
}

.small-slider .ig-img {
    height: auto;
    max-width: 100%;
    max-height: 100% ;
    width: auto;
    position: relative;
    overflow: hidden;
}

.slider-ig-logo {
    width: 42px;
    height: 42px;
}

/* Use full-screen slider for Chromium + FF, use expanded for IE + iOS.
.expanded-slider {
    position: fixed;
    left: 10%;
    max-width: 85% ;
    max-height: 65% ;
    width: 85%;
    height: auto;
    margin: 6% auto 6%;
    background-color: #efebe9;
    transition: all .5s linear;
}

.expanded-slider .slider-navigation {
    margin-top: 1.5em;
    margin-left: 1.75em;
}

.expanded-slider img {
    width: 100% ;
    max-height: 100% ;
    height: auto;
}

.expanded-slider .ig-img {
    position: relative;
    top: 0;
    left: 0;
    width: auto ;
    max-width: 75%;
    margin-right: 26% ;
    min-width: 65% ;
    margin-left: auto;
    align-content: center;

}

.expanded-slider .ig-likes-logo-container {
    margin-top: 1.5em;
    right: 1.75em;
}

.expanded-slider .ig-caption {
    padding-top: 5em;
    position: absolute;
    top: 70px;
    right: 5px;
    width: 28%;
    overflow:  auto;
    max-height: 90%;
}
*/

.full-screen-slider {
    height: 100%;
}

.full-screen-slider .ig-img-container {
    width: 100% ;
    height: 100% ;
}


.full-screen-slider figure {
    height: 100%;
    padding: 0;
    margin: 0;
}

.full-screen-slider img {
    width: auto;
    height: 100%;
}

.full-screen-slider .ig-caption {
    padding: 2em 3em 3em;
}

.full-screen-slider .ig-img {
    width: 100%;
    height: auto;
}


/* Screen width must be at least 1081 to fit description next to the image. */
@media screen and (min-width: 1081px) {
    .full-screen-slider .ig-caption {
        border-color: #bbb;
        position: absolute;
        top: 0;
        right: 0;
        width: 25%;
        overflow: auto;
        height: 100%;
        padding: 6em 1.5em 3em 2em;
    }

    .full-screen-slider .ig-img {
        width: auto ;
        max-width: 75%;
        height: 100% ;
        margin-left: auto;
        margin-right: auto;
    }

    .full-screen-slider img {
        width: auto;
        height: 100%;
    }
}

.full-screen-slider .ig-likes-logo-container {
    margin-right: 2em;
    margin-top: 1em;
}

/* Based on: https://codepen.io/Idered/pen/qLoGE */
.ig-love-btn {
    box-shadow: 1px 1px 0 rgba(255,255,255,0.5) inset;
    border-radius: 3px;
    border: 1px solid;
    display: inline-block;
    height: 24px;
    padding: 0 8px;
    position: relative;
    font-size: 15px;
    text-decoration: none;
    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
    align-items: center;
    justify-content: center;
    margin-right: 5px;
    margin-top: 10%;

}

.ig-love-btn {
    background-color: #dbdbdb;
    border-color: #bbb;
    color: #666;
}

.ig-love-btn:hover,
.ig-love-btn.active {
    text-shadow: 0 1px 0 #b12f27;
    background-color: #f64136;
    border-color: #b12f27;
    text-decoration: none;
}
.ig-love-btn:active { box-shadow: 0 0 5px 3px rgba(0,0,0,0.2) inset; }
.ig-love-btn span { color: #f64136; }
.ig-love-btn:hover, .ig-love-btn:hover span,
.ig-love-btn.active, .ig-love-btn.active span { color: #eeeeee; }
.ig-love-btn:active span {
    color: #b12f27;
    text-shadow: 0 1px 0 rgba(255,255,255,0.3);
}

.slider-navigation {
    z-index: 14;
    color: #fdfdfd;
    font-size: 1rem;
    display: flex;
    position: absolute;
    left: 0;
    /*  Fallback bg */
    background-color: rgb(99, 99, 99);
    /* RGBa with 0.45 opacity */
    background-color: rgba(99, 99, 99, 0.65);
    width: 120px;
}

.slider-counter-container {
    width: auto;
    min-width: 113px;
    height: 40px;
    top: 0;
    justify-content: center;
}

.slider-btn {
    background: none;
    border: none;
    cursor:pointer;
    overflow: hidden;
    outline:none;
    font-size: 1.2rem;
    color: #fdfdfd;
}

#sliderPrevious, #sliderForward {
    font-size: 1.8rem;
    margin-top: -4px;
}

.slider-counter {
    margin-top: auto;
    align-content: center;
    margin-bottom: auto;
}

/* Media query for IE 10-11. Float schedule infos to left. */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .slider-counter {
        margin-top: 8px;
    }
}

#expandSlider {
    margin-top: -5px;
    margin-right: 10px;
    font-size: 1.35rem;
    margin-left: 5px;
}

#expandSlider:hover, #sliderPrevious:hover, #sliderForward:hover,  #sliderPlay:hover, .progress-value:hover, .fa-stop:hover {
    color: skyblue;
    text-decoration: none;
    cursor: pointer;
}

.slider-play-expand-container {
    top: 40px;
    width: auto;
    min-width: 113px;
    padding-left: 10px;
    padding-bottom: 10px;
    justify-content: center;
}

.slider-play-container {
    height: 30px;
    width: 30px;
}

#sliderPlay {
    height: 30px;
    width: 30px;
}

/* Progress bar based on: https://bootsnipp.com/snippets/nrQWa */
.progress{
    width: 30px;
    height: 30px;
    background: none;
    margin: 0 auto;
    box-shadow: none;
    position: relative;
}

.progress > span{
    width: 50%;
    height: 100%;
    overflow: hidden;
    position: absolute;
    top: 0;
    z-index: 1;
}
.progress .progress-left{
    left: 0;
}
.progress .progress-bar{
    width: 100%;
    height: 100%;
    background: none;
    border-width: 2px;
    border-style: solid;
    position: absolute;
    top: 0;
}
.progress .progress-left .progress-bar{
    left: 100%;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    border-left: 0;
    -webkit-transform-origin: center left;
    transform-origin: center left;
}
.progress .progress-right{
    right: 0;
}
.progress .progress-right .progress-bar{
    left: -100%;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    border-right: 0;
    -webkit-transform-origin: center right;
    transform-origin: center right;
    animation: loading-1 3.23s linear forwards;
}

.progress .progress-value {
    width: 85%;
    height: 85%;
    border-radius: 50%;
    border: 2px solid #ebebeb;
    font-size: .85rem;
    line-height: 20px;
    text-align: center;
    position: absolute;
    top: 7.5%;
    left: 7.5%;
    color: #fdfdfd;
}

.progress-value i {
    color: #fdfdfd;
}

.progress .progress-value:hover {
    color: skyblue;
}

.progress.blue .progress-bar {
    border-color: #049dff;
}
.progress.blue .progress-value{
    color: #049dff;
}

.progress.blue .progress-left .progress-bar {
    animation: loading-2 3.23s linear forwards 3.23s;
}

@keyframes loading-1 {
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(180deg);
        transform: rotate(180deg);
    }
}
@keyframes loading-2 {
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(180deg);
        transform: rotate(180deg);
    }
}
@keyframes loading-3 {
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }
}
@keyframes loading-4 {
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(36deg);
        transform: rotate(36deg);
    }
}
@keyframes loading-5 {
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(126deg);
        transform: rotate(126deg);
    }
}
@media only screen and (max-width: 990px){
    .progress{ margin-bottom: 20px; }
}

